--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
-		"obsidian": "^0.12.17",
-		"tslib": "2.3.1",
-		"typescript": "4.4.4"
+			"tslib": "2.3.1"
 	},
 	"dependencies": {
-		"@popperjs/core": "^2.11.2"
+		"@popperjs/core": "^2.11.2",
+		"obsidian": "^1.4.0",
+		"@types/node": "^20.0.0",
+		"typescript": "^5.0.0"
 	}
 }
